infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1 # Number of Pods we want to created
  selector: # A Deployment doesn't know which Pods to manage. The selector field tells the Deployment to look for the Pods with the specified label of `app = post` and manage them
    matchLabels:
      app: event-bus
  template: # Specifies the exact configuration of the Pod that we want the Deployment to make
    # Template is thought of as the configuration file for a Kubernetes Pod
    metadata:
      labels: # The labels used to be matched by the selector
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: nilchyyy/udemy-event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector: # Needs to know what Pods to expose to external resources, supposed to match the template label in the deployment config file
    app: event-bus
  ports:
    - name: event-bus # logging purposes
      protocol: TCP
      port: 4005 # The port used by the Service to receive information from external sources
      targetPort: 4005 # The port used by the Pod within a node to receive information
