infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector: # Needs to know what Pods to expose to external resources, supposed to match the template label in the deployment config file
    app: posts
  ports:
    - name: posts # logging purposes
      protocol: TCP
      port: 4000 # The port used by the Service to receive information from external sources
      targetPort: 4000 # The port used by the Pod within a node to receive information
