infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 # Number of Pods we want to created
  selector: # A Deployment doesn't know which Pods to manage. The selector field tells the Deployment to look for the Pods with the specified label of `app = post` and manage them
    matchLabels:
      app: query
  template: # Specifies the exact configuration of the Pod that we want the Deployment to make
    # Template is thought of as the configuration file for a Kubernetes Pod
    metadata:
      labels: # The labels used to be matched by the selector
        app: query
    spec:
      containers:
        - name: query
          image: nilchyyy/udemy-query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector: # Needs to know what Pods to expose to external resources, supposed to match the template label in the deployment config file
    app: query
  ports:
    - name: query # logging purposes
      protocol: TCP
      port: 4002 # The port used by the Service to receive information from external sources
      targetPort: 4002 # The port used by the Pod within a node to receive information
