infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true" # Used to handle the regex paths
spec:
  rules:
    - host: posts.com # Assigns and hosts the Service to a domain, allows a single Kubernetes cluster to have multiple applications under different domain names
      http:
        paths: # Paths are ordered from most important to least important. The order in which the paths are matched is based on the order it is listed
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
          - path: /?(.*) # Need a regex matcher here for the default route to try and match any paths while still showing the React App
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
  ingressClassName: nginx
